Update README.md
System Details Brief is added as requested.